--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "watch": "node scripts/build.js --watch",
     "test": "node scripts/test.js",
     "lint": "eslint src",
     "fix": "eslint src --fix"
