--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "watch": "node scripts/build.js --watch",
+    "watch": "node scripts/watch.js --watch --progress",
     "test": "node scripts/test.js",
     "lint": "eslint src",
     "fix": "eslint src --fix"
@@ -17,12 +17,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "ace-builds": "^1.23.2",
     "antd": "^5.5.2",
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
